# MTRX3760_project_1_the_authority

./: CMakeLists.txt  FileInformation.txt  README.md  empty_world.launch.py  empty_world.world  turtlebot3_drive.cpp
msg/: YawY.msg
turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_gazebo/include/: color_detector.hpp  image_processor.hpp  laser_scan_processor.hpp  obstacle_avoidance.hpp  odom_processor.hpp  robot_pose_processor.hpp  sensor_data_processor.hpp  velocity_commander.hpp
turtlebot3_gazebo/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
turtlebot3_gazebo/launch/: empty_world.launch.py  spawn_turtlebot3.launch.py  turtlebot3_enclosedmaze.launch.py  turtlebot3_floatingmaze.launch.py  turtlebot3_opentrack.launch.py  turtlebot3_world.launch.py
turtlebot3_gazebo/models/turtlebot3_enclosedmaze/: model.sdf
turtlebot3_gazebo/models/turtlebot3_opentrack/: model.sdf
turtlebot3_gazebo/src/: color_detector.cpp  image_processor.cpp  laser_scan_processor.cpp  main.cpp  maze_visualiser.cpp  obstacle_avoidance.cpp  odom_processor.cpp  points_and_lines.cpp  robot_pose_processor.cpp  sensor_data_processor.cpp  turtlebot3_drive.cpp  velocity_commander.cpp
turtlebot3_gazebo/worlds/: empty_world.world  turtlebot3_enclosedmaze.world  turtlebot3_floatingmaze.world  turtlebot3_world.world
turtlebot3_gazebo/worlds/maze1/: model.sdf
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
turtlebot3_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
turtlebot3_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_description/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_example/share/turtlebot3_example/: package.sh  package.xml
turtlebot3_ws/install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
turtlebot3_ws/install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
turtlebot3_ws/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_gazebo/include/: image_processor.hpp  laser_scan_processor.hpp  odom_processor.hpp  robot_pose_processor.hpp  velocity_commander.hpp
turtlebot3_ws/install/turtlebot3_gazebo/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
turtlebot3_ws/install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: maze_visualiser  points_and_lines  turtlebot3_drive
turtlebot3_ws/install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_maze/include/: color_detector.hpp  odom_processor.hpp  robot_pose_processor.hpp  velocity_commander.hpp
turtlebot3_ws/install/turtlebot3_maze/lib/turtlebot3_maze/: color_detector_node  laser_scan_processor_node  odom_processor_node
turtlebot3_ws/install/turtlebot3_maze/share/turtlebot3_maze/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
turtlebot3_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_navigation2/share/turtlebot3_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_node/lib/turtlebot3_node/: turtlebot3_ros
turtlebot3_ws/install/turtlebot3_node/share/turtlebot3_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/turtlebot3_maze/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3_maze/include/: color_detector.hpp  image_processor.hpp  laser_scan_processor.hpp  obstacle_avoidance.hpp  odom_processor.hpp  robot_pose_processor.hpp  sensor_data_processor.hpp  velocity_commander.hpp
turtlebot3_ws/src/turtlebot3_maze/launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_enclosedmaze.launch.py  turtlebot3_floatingmaze.launch.py  turtlebot3_launch.py  turtlebot3_opentrack.launch.py
turtlebot3_ws/src/turtlebot3_maze/models/turtlebot3_opentrack/: model.sdf
turtlebot3_ws/src/turtlebot3_maze/src/: color_detector.cpp  image_processor.cpp  laser_scan_processor.cpp  main.cpp  obstacle_avoidance.cpp  odom_processor.cpp  robot_pose_processor.cpp  sensor_data_processor.cpp  velocity_commander.cpp
turtlebot3_ws/src/turtlebot3_maze/worlds/: turtlebot3_floatingmaze.world  turtlebot3_opentrack.world
(+386 files in other folders)
